--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,11 @@ body { padding-top: 100px; }
 footer { padding-bottom: 100px;}
 table, td, th { vertical-align: middle; border: none; }
 th { border-bottom: 1px solid #DDD; }
+
+a:hover {
+	background-color: #70DBDB;
+}
+
+img:hover {
+	transform: scale(1.1);
+}
